@@ -1,3 +1,24 @@
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/*
+ * Copyright (C) 2006, Mr Jamie McCracken (jamiemcc@gnome.org)
+ * Copyright (C) 2008, Nokia
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+ * Boston, MA  02110-1301, USA.
+ */
+
 #ifndef __TRACKERD_INDEX_MANAGER_H__
 #define __TRACKERD_INDEX_MANAGER_H__
 
@@ -13,17 +34,15 @@ typedef enum {
 	TRACKER_INDEXER_TYPE_FILES_UPDATE
 } TrackerIndexerType;
 
-
-gboolean        tracker_index_manager_init                  (const gchar        *data_dir,
-                                                             gint                min_bucket,
-                                                             gint                max_bucket);
-gchar *         tracker_index_manager_get_filename          (TrackerIndexerType index);
-TrackerIndexer *tracker_index_manager_get_index             (TrackerIndexerType  index);
-gboolean        tracker_index_manager_are_indexes_too_big   (void);
-gboolean        tracker_index_manager_has_tmp_merge_files   (TrackerIndexerType  type);
-void            tracker_index_manager_shutdown              (void);
-
+gboolean        tracker_index_manager_init                (const gchar        *data_dir,
+                                                           gint                min_bucket,
+                                                           gint                max_bucket);
+void            tracker_index_manager_shutdown            (void);
+gchar *         tracker_index_manager_get_filename        (TrackerIndexerType  index);
+TrackerIndexer *tracker_index_manager_get_index           (TrackerIndexerType  index);
+gboolean        tracker_index_manager_are_indexes_too_big (void);
+gboolean        tracker_index_manager_has_tmp_merge_files (TrackerIndexerType  type);
 
 G_END_DECLS
 
-#endif
+#endif /* __TRACKERD_INDEX_MANAGER_H__ */
