@@ -22,23 +22,21 @@
 #ifndef __TRACKERD_INDEXER_H__
 #define __TRACKERD_INDEXER_H__
 
-#include <glib.h>
-
 G_BEGIN_DECLS
 
 #include <glib-object.h>
-#include <libtracker-common/tracker-index-item.h>
 
+#include <libtracker-common/tracker-index-item.h>
 
 #define TRACKER_TYPE_INDEXER         (tracker_indexer_get_type())
 #define TRACKER_INDEXER(o)           (G_TYPE_CHECK_INSTANCE_CAST ((o), TRACKER_TYPE_INDEXER, TrackerIndexer))
-#define TRACKER_INDEXER_CLASS(c)     (G_TYPE_CHECK_CLASS_CAST ((c),    TRACKER_TYPE_INDEXER, TrackerIndexerClass))
+#define TRACKER_INDEXER_CLASS(c)     (G_TYPE_CHECK_CLASS_CAST ((c), TRACKER_TYPE_INDEXER, TrackerIndexerClass))
 #define TRACKER_IS_INDEXER(o)        (G_TYPE_CHECK_INSTANCE_TYPE ((o), TRACKER_TYPE_INDEXER))
-#define TRACKER_IS_INDEXER_CLASS(c)  (G_TYPE_CHECK_CLASS_TYPE ((c),    TRACKER_TYPE_INDEXER))
-#define TRACKER_INDEXER_GET_CLASS(o) (G_TYPE_INSTANCE_GET_CLASS ((o),  TRACKER_TYPE_INDEXER, TrackerIndexerClass))
+#define TRACKER_IS_INDEXER_CLASS(c)  (G_TYPE_CHECK_CLASS_TYPE ((c), TRACKER_TYPE_INDEXER))
+#define TRACKER_INDEXER_GET_CLASS(o) (G_TYPE_INSTANCE_GET_CLASS ((o), TRACKER_TYPE_INDEXER, TrackerIndexerClass))
 
-typedef struct TrackerIndexer TrackerIndexer;
-typedef struct TrackerIndexerClass TrackerIndexerClass;
+typedef struct TrackerIndexer            TrackerIndexer;
+typedef struct TrackerIndexerClass       TrackerIndexerClass;
 typedef struct TrackerIndexerWordDetails TrackerIndexerWordDetails;
 
 struct TrackerIndexer {
@@ -48,7 +46,6 @@ struct TrackerIndexer {
 struct TrackerIndexerClass {
 	GObjectClass parent_class;
 };
-
 
 GType             tracker_indexer_get_type        (void);
 TrackerIndexer *  tracker_indexer_new             (const gchar    *name,
@@ -73,7 +70,6 @@ TrackerIndexItem *tracker_indexer_get_word_hits   (TrackerIndexer *indexer,
 gboolean          tracker_indexer_remove_dud_hits (TrackerIndexer *indexer,
 						   const gchar    *word,
 						   GSList         *dud_list);
-
 
 G_END_DECLS
 
